Fix app overflow

--- a/src/Styles/categories.css
+++ b/src/Styles/categories.css
@@ -1,9 +1,9 @@
 .categories--container {
+  overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   display: grid;
   place-items: center;
-  overflow: hidden;
 }
 .categories--container button {
   border: none;
