--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #f5f6fa;
 }
 
